started pseudocode and changed script.js filename

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Covidodometer</title>
+
 </head>
+
 <body>
-    
+    <!-- webpage title -->
+    <!-- Row of dropdown menus buttons -->
+    <!-- covid variables (deaths, positivity rate, vaccination rate, hospitilization/icu capacity, etc etc) -->
+    <!-- State -->
+    <!-- County -->
+    <!-- City -->
+    <!-- Timeframe (year/month/week/today) -->
+    <!-- Graph -->
+    <!-- footer -->
+    <!-- link chart.js here? -->
+    <!-- link javascript -->
+    <script src="./assets/script.js"></script>
 </body>
+
 </html>
