integrated adding a second data set and second state selector

--- a/index.html
+++ b/index.html
@@ -23,131 +23,6 @@
     </div>
   </section>
   <!-- Row of dropdown menus buttons -->
-  <div class="dropdown">
-    <div class="dropdown-trigger">
-      <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-        <span>Dropdown button</span>
-        <span class="icon is-small">
-          <i class="fas fa-angle-down" aria-hidden="true"></i>
-        </span>
-      </button>
-    </div>
-    <div class="dropdown-menu" id="dropdown-menu" role="menu">
-      <div class="dropdown-content">
-        <a href="#" class="dropdown-item">
-          Deaths
-        </a>
-        <a class="dropdown-item">
-          Positive tests
-        </a>
-
-      </div>
-    </div>
-  </div>
-
-  <div class="dropdown">
-    <div class="dropdown-trigger">
-      <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-        <span>State Selection</span>
-        <span class="icon is-small">
-          <i class="fas fa-angle-down" aria-hidden="true"></i>
-        </span>
-      </button>
-    </div>
-    <div class="dropdown-menu" id="stateDropdownMenu" role="menu">
-      <div class="dropdown-content">
-        <a value="AK" class="dropdown-item">
-          Arkansas
-        </a>
-        <a value="AL" class="dropdown-item">
-          Alabama
-        </a>
-        <a value="IL" class="dropdown-item">
-          Illinois
-        </a>
-        <a class="dropdown-item">
-          Other dropdown item
-        </a>
-        <a class="dropdown-item">
-          Other dropdown item
-        </a>
-        <a href="#" class="dropdown-item is-active">
-          Active dropdown item
-        </a>
-        <a href="#" class="dropdown-item">
-          Other dropdown item
-        </a>
-        <hr class="dropdown-divider">
-        <a href="#" class="dropdown-item">
-          With a divider
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="dropdown">
-    <div class="dropdown-trigger">
-      <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-        <span>Dropdown button</span>
-        <span class="icon is-small">
-          <i class="fas fa-angle-down" aria-hidden="true"></i>
-        </span>
-      </button>
-    </div>
-    <div class="dropdown-menu" id="dropdown-menu" role="menu">
-      <div class="dropdown-content">
-        <a href="#" class="dropdown-item">
-          Dropdown item
-        </a>
-        <a class="dropdown-item">
-          Other dropdown item
-        </a>
-        <a href="#" class="dropdown-item is-active">
-          Active dropdown item
-        </a>
-        <a href="#" class="dropdown-item">
-          Other dropdown item
-        </a>
-        <hr class="dropdown-divider">
-        <a href="#" class="dropdown-item">
-          With a divider
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="dropdown">
-    <div class="dropdown-trigger">
-      <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-        <span>Dropdown button</span>
-        <span class="icon is-small">
-          <i class="fas fa-angle-down" aria-hidden="true"></i>
-        </span>
-      </button>
-    </div>
-    <div class="dropdown-menu" id="dropdown-menu" role="menu">
-      <div class="dropdown-content">
-        <a href="#" class="dropdown-item">
-          Dropdown item
-        </a>
-        <a class="dropdown-item">
-          Other dropdown item
-        </a>
-        <a href="#" class="dropdown-item is-active">
-          Active dropdown item
-        </a>
-        <a href="#" class="dropdown-item">
-          Other dropdown item
-        </a>
-        <hr class="dropdown-divider">
-        <a href="#" class="dropdown-item">
-          With a divider
-        </a>
-      </div>
-    </div>
-  </div>
-
-
   <div class="select">
     <select id="categorySelect">
       <option value="" disabled selected>Select what kind of COVID Data to view</option>
@@ -164,6 +39,18 @@
       <option value="AK">Arkansas</option>
       <option value="AL">Alabama</option>
       <option value="IL">Illinois</option>
+    </select>
+  </div>
+
+  <div class="select">
+    <select id="stateSelectSecond">
+      <option value="" disabled selected>Select a second State from the list below to compare results with the first
+        state</option>
+      <option value="AK">Arkansas</option>
+      <option value="AL">Alabama</option>
+      <option value="IL">Illinois</option>
+      <option value="IN">Indiana</option>
+      <option value="WI">Wisconsin</option>
     </select>
   </div>
 
