added time based filtering and Tom's label updates

--- a/index.html
+++ b/index.html
@@ -148,18 +148,13 @@
       <option value="30">Last Month</option>
       <option value="182">Last 6 Months</option>
       <option value="365">Last Year</option>
-      <option value="alltime">All Time</option>
+      <option value="alldata">All Time</option>
     </select>
   </div>
 
 
   <button class="button" id="submitBtn">Submit</button>
 
-  <!-- covid variables (deaths, positivity rate, vaccination rate, hospitilization/icu capacity, etc etc) -->
-  <!-- State -->
-  <!-- County -->
-  <!-- City -->
-  <!-- Timeframe (year/month/week/today) -->
   <!-- Graph -->
   <div id="graph"></div>
   <canvas id="myChart"></canvas>
